Transform node gives bad results #39786

Closed
opened 2014-04-18 23:21:26 +02:00 by Kévin Dietrich · 11 comments

System Information
Linux Mint 15
GTX 650

Blender Version
Broken: 2.70.3 36defb7

Short description of error
Transform node outputs a whacky-whacky image

Exact steps for others to reproduce the error

  • Go to the compositor
  • add an image node
  • add a transform node and connect it to the image
  • finally plug some viewer node onto the latter

Screenshot
transnode_bug.png

**System Information** Linux Mint 15 GTX 650 **Blender Version** Broken: 2.70.3 36defb7 **Short description of error** Transform node outputs a whacky-whacky image **Exact steps for others to reproduce the error** - Go to the compositor - add an image node - add a transform node and connect it to the image - finally plug some viewer node onto the latter **Screenshot** ![transnode_bug.png](https://archive.blender.org/developer/F85202/transnode_bug.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Author
Member

This should fix it.

This should fix it.
Jeroen Bakker was assigned by Thomas Dinges 2014-04-19 22:51:44 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Hi Lukas,

can you look at this bug + patch. It seems to be related to your work.

Jeroen

Hi Lukas, can you look at this bug + patch. It seems to be related to your work. Jeroen
Member

Yes, fix looks good.

Yes, fix looks good.

This issue was referenced by blender/blender-addons-contrib@f5a716b5e0

This issue was referenced by blender/blender-addons-contrib@f5a716b5e05375b9faef23553b66157dfe9f95f0

This issue was referenced by f5a716b5e0

This issue was referenced by f5a716b5e05375b9faef23553b66157dfe9f95f0
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit f5a716b5e0.

Closed by commit f5a716b5e0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39786
No description provided.