Fix T39786: Transform node gives bad result.

Error caused by rB09874df1.